# gptmaker-mcp

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  scrape_endpoints.sh
.github/workflows/: publish.yml
docs/: openapi.json
docs/analysis/: backlog_tools_priorizado.md  periodo4_tools.md
src/gptmaker_mcp/: client.py  server.py
src/gptmaker_mcp/tools/: agents.py  channels.py  chats.py  composites.py  contacts.py  custom_fields.py  diagnostics.py  idle_actions.py  intentions.py  interactions.py  mcp_connections.py  trainings.py  transfer_rules.py  workspace.py
